MATH-1547: Remove "findBest" and "findBestAndSecondBest" methods from "MapUtils".
Use equivalent functionality from class "MapRanking".